force-app/main/default/objects/PagoCobroDePedido__c/fields/Fecha__c.field-meta.xml
<CustomField>
    <fullName>Fecha__c</fullName>
    <formula>IF ( ISPICKVAL ( Tipo__c , &quot;Pago&quot;  ) ,
Pedido__r.Fecha_de_Compromiso_con_el_Cliente__c ,
Pedido__r.FechaEstimadaCobro__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fecha</label>
    <type>Date</type>
</CustomField>