force-app/main/default/objects/PagoCobroDePedido__c/fields/Importe__c.field-meta.xml
<CustomField>
    <fullName>Importe__c</fullName>
    <formula>IF ( ISPICKVAL ( Tipo__c , &quot;Pago&quot;  ) ,
Pedido__r.CostoOrigen__c ,
Pedido__r.Precio_Total__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Importe</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>