force-app/main/default/objects/PagoCobroDePedido__c/fields/Pedido__c.field-meta.xml
<CustomField>
    <fullName>Pedido__c</fullName>
    <label>Pedido</label>
    <referenceTo>PedidoDeCompra__c</referenceTo>
    <relationshipLabel>Pago y cobro de pedido</relationshipLabel>
    <relationshipName>PagoCobroDePedidos</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>