force-app/main/default/objects/PagoCobroDePedido__c/fields/Tipo__c.field-meta.xml
<CustomField>
    <fullName>Tipo__c</fullName>
    <label>Tipo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pago</fullName>
                <color>#FF0000</color>
                <label>Pago</label>
            </value>
            <value>
                <fullName>Cobro</fullName>
                <color>#3366FF</color>
                <label>Cobro</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>